Too much to name right now. Finished Craftimg as example, fixed some bugs, some refactoring

--- a/css/main-ui-prototype.css
+++ b/css/main-ui-prototype.css
@@ -139,7 +139,7 @@ header nav button {
 header .resource-view {
   display: flex;
   flex-grow: 1;
-  justify-content: center;
+  justify-content: flex-end;
 }
 header .resource-view div {
   flex-grow: 1;
@@ -152,9 +152,20 @@ header .resource-view div {
 header .header-additional-infos{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100%;
+}
+
+header .information-bar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+header .information-bar > div {
+  flex-grow: 1;
 }
 
 
@@ -319,13 +330,12 @@ section {
 /******** location selection *********/
 .location-selection-panel {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 100%;
-  width: 50%;
 }
 .location-selection-row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-grow: 1;
 }
 .location-entry {
@@ -751,6 +761,28 @@ section {
   
 }
 
+.crafting-queue-list{
+  min-height: 100px;
+  margin: 5px;
+  box-shadow: 2px 2px 5px black;
+  background: linear-gradient(black, brown);
+  display: flex;
+}
+.crafting-queue-slot {
+  flex-basis: 75px;
+  border: 1px solid black;
+  background-color: rgba(255,255,255,0.05);
+  margin: 10px;
+}
+
+.crafting-queue-used-slot{
+  background-color: rgba(0,0,0,0.7);
+  color: white;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+
 .crafting-view-entry-list {
   box-shadow: 1px 1px black;
   background: radial-gradient(white,rgba(255,255,255,0.5));
@@ -768,6 +800,7 @@ section {
   height: 125px;
   display: flex;
   flex-direction: column;
+  max-width: 200px;
 }
 .crafting-view-recipe-entry:hover{
   /*border: 2px solid #FF0000FF;*/
